fixing https error
