# swagger.json
@@ -5,32 +5,12 @@
     "description": "Contacts",
     "version": "1.0.0"
   },
-  "host": "https://cse341-fall24-2sba.onrender.com",
+  "host": "//cse341-fall24-2sba.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/chance": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/api-docs/api-docs": {
       "get": {
         "description": "",
